Added input interface concept art

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,16 +144,18 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/PuzzleExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/PuzzleBlock.PuzzleBlock
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=329.600
-WindowSize=X=1281.600 Y=721.600
+ScreenPosition=X=640.000 Y=329.333
+WindowSize=X=1273.333 Y=665.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1000,4 +1002,54 @@ SceneOutliner.TimeStamp=2022.01.27-22.53.08
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2022.01.27-22.53.00
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.01.27-22.52.53
+BlueprintGraph.LastCompileMethod=Unknown
+
+[ContentBrowserRecent]
+MRUItem0=/Game/PuzzleBP/Blueprints/PuzzleBlock
+
+[DetailCategories]
+PuzzleBlock_C.Tick=True
+PuzzleBlock_C.Default=True
+PuzzleBlock_C.Replication=True
+PuzzleBlock_C.Rendering=True
+PuzzleBlock_C.Collision=True
+PuzzleBlock_C.Actor=True
+PuzzleBlock_C.Input=True
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
