Updated Interface Concept Art
Added a 'Next Command' button to the interface concept art

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 LastLevel=/Game/PuzzleBP/Maps/PuzzleExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/PuzzleBlock.PuzzleBlock
 
 [RootWindow]
