Added IO Panel Meshes

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,10 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Geometry/Meshes/IOController/IORail_InputDeviceBox.IORail_InputDeviceBox
+OpenAssetsAtExit=/Game/Geometry/Meshes/IOController/IORail_InputDevicePanelLarge.IORail_InputDevicePanelLarge
+OpenAssetsAtExit=/Game/Geometry/Meshes/IOController/Buttons/InputButtonGO.InputButtonGO
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=329.000
@@ -1020,23 +1023,26 @@ MovieSceneCapture.TimeStamp=2022.04.14-19.58.40
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Maps/GameEnvironment
-MRUItem1=/Game/StarterContent/Maps/Minimal_Default
-MRUItem2=/Game/StarterContent/Maps/Minimal_Default1
-MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem4=/Game/StarterContent/Maps/StarterMap
-MRUItem5=/Game/PuzzleBP/Maps/PuzzleExampleMap
-MRUItem6=/Game/PuzzleBP/Maps/ParticleTest
-MRUItem7=/Game/ParticleFX/splashSystem
-MRUItem8=/Game/ParticleFX/Textures/M_Splat
-MRUItem9=/Game/ParticleFX/M_Splash
-MRUItem10=/Game/ParticleFX/paintsplatgrid
-MRUItem11=/Game/ParticleFX/splashSystemUVTest
-MRUItem12=/Game/ParticleFX/872-8723086_splat-effect-sprite-sheet-splat-sprite-sheet
-MRUItem13=/Game/ParticleFX/M_Splat
-MRUItem14=/Game/ParticleFX/spraySystem
-MRUItem15=/Game/ParticleFX/Textures/M_Spray
-MRUItem16=/Game/PuzzleBP/Blueprints/PuzzleBlock
+MRUItem0=/Game/Geometry/Meshes/IOController/Buttons/InputButtonGO
+MRUItem1=/Game/Geometry/Meshes/IORail_InputDevicePanelLarge
+MRUItem2=/Game/Geometry/Meshes/IORail_InputDeviceBox
+MRUItem3=/Game/PuzzleBP/Maps/GameEnvironment
+MRUItem4=/Game/StarterContent/Maps/Minimal_Default
+MRUItem5=/Game/StarterContent/Maps/Minimal_Default1
+MRUItem6=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem7=/Game/StarterContent/Maps/StarterMap
+MRUItem8=/Game/PuzzleBP/Maps/PuzzleExampleMap
+MRUItem9=/Game/PuzzleBP/Maps/ParticleTest
+MRUItem10=/Game/ParticleFX/splashSystem
+MRUItem11=/Game/ParticleFX/Textures/M_Splat
+MRUItem12=/Game/ParticleFX/M_Splash
+MRUItem13=/Game/ParticleFX/paintsplatgrid
+MRUItem14=/Game/ParticleFX/splashSystemUVTest
+MRUItem15=/Game/ParticleFX/872-8723086_splat-effect-sprite-sheet-splat-sprite-sheet
+MRUItem16=/Game/ParticleFX/M_Splat
+MRUItem17=/Game/ParticleFX/spraySystem
+MRUItem18=/Game/ParticleFX/Textures/M_Spray
+MRUItem19=/Game/PuzzleBP/Blueprints/PuzzleBlock
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -1164,11 +1170,11 @@ NiagaraActor.Activation=True
 NiagaraActor.Cooking=True
 NiagaraActor.Replication=True
 NiagaraActor.Actor=True
-FbxImportUI.Mesh=True
-FbxImportUI.Transform=True
+FbxImportUI.Mesh=False
+FbxImportUI.Transform=False
 FbxImportUI.Miscellaneous=True
 FbxImportUI.Material=True
-FbxImportUI.FbxFileInformation=True
+FbxImportUI.FbxFileInformation=False
 ParticleSystem.ParticleSystem=True
 ParticleSystem.Thumbnail=True
 ParticleSystem.LOD=True
@@ -1345,6 +1351,31 @@ RectLight.TransformCommon=True
 Actor.Surface Materials=True
 Actor.Geometry=True
 Actor.Surface Properties=True
+FbxImportUI.Animation=False
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+StaticMeshActor.HLOD=False
+StaticMeshActor.Mobile=False
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Animation=True
+SkeletalMesh.Sampling=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1455,6 +1486,14 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/ParticleFX/paintsplatgrid.paintsplatgrid=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Meshes/IOController/Buttons/InputButtonGO.InputButtonGO;
+RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_OutputDevice.IORail_OutputDevice;
+RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_IORail.IORail_IORail;
+RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_IOconnectCylinders.IORail_IOconnectCylinders;
+RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_IOconnectBox.IORail_IOconnectBox;
+RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_InputDevicePanelMedium.IORail_InputDevicePanelMedium;
+RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_InputDevicePanelLarge.IORail_InputDevicePanelLarge;
+RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_InputDeviceBox.IORail_InputDeviceBox;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
@@ -1467,10 +1506,6 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/ParticleFX/splashSystem.splashSystem;
-RecentlyPlaced=/Game/ParticleFX/spraySystem.spraySystem;
-RecentlyPlaced=/Game/ParticleFX/Textures/M_Spray.M_Spray;
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1592,7 +1627,7 @@ bUpdateSkeletonReferencePose=False
 bUseT0AsRefPose=False
 bPreserveSmoothingGroups=True
 bImportMeshesInBoneHierarchy=True
-bImportMorphTargets=False
+bImportMorphTargets=True
 ThresholdPosition=0.000020
 ThresholdTangentNormal=0.000020
 ThresholdUV=0.000977
@@ -1653,7 +1688,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -1661,4 +1696,39 @@ LightDir=P=-45.000004 Y=-179.999969 R=0.000000
 [DetailCategoriesAdvanced]
 Texture2D.Texture=True
 Brush.BrushSettings=True
+FbxImportUI.Mesh=True
+FbxImportUI.Miscellaneous=True
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
