Added base code for button types
Added the initial code for the various types of interface buttons + added a draft look of the control panel in the room

--- a/Unreal Engine Files/Alan/Config/DefaultEngine.ini
+++ b/Unreal Engine Files/Alan/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Alan
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PuzzleBP/Maps/PuzzleExampleMap
-GameDefaultMap=/Game/PuzzleBP/Maps/PuzzleExampleMap
+EditorStartupMap=/Game/PuzzleBP/Maps/GameEnvironment.GameEnvironment
+GameDefaultMap=/Game/PuzzleBP/Maps/GameEnvironment.GameEnvironment
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
