Added placeholder textures to IO Controller

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes/IOController/Buttons
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints/CommandInterface
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -155,11 +155,10 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/TestButton.TestButton
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=328.667
+ScreenPosition=X=640.000 Y=328.000
 WindowSize=X=1273.333 Y=665.333
 InitiallyMaximized=True
 
@@ -177,7 +176,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/DELL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1021,6 +1020,8 @@ Voice.TimeStamp=2022.04.14-19.58.48
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.04.14-19.58.40
 MovieSceneCapture.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2022.01.27-22.52.58
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
 MRUItem0=/Game/StarterContent/Materials/M_Metal_Gold
@@ -1915,7 +1916,7 @@ InstalledPlugins=VictoryBPLibrary
 [DetailPropertyExpansion]
 MaterialExpressionDynamicParameter="\"Object.ParamNames\" "
 MaterialExpression=
-Object="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
+Object=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
