Updated button press timings
Co-Authored-By: ScottSpoors <71763029+ScottSpoors@users.noreply.github.com>

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,7 +155,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ColourButton.ColourButton
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/EmotionButton.EmotionButton
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/GoButton.GoButton
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlButton.ControlButton
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=328.000
@@ -1024,12 +1028,12 @@ ExternalImagePicker.TimeStamp=2022.01.27-22.52.58
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Materials/M_Metal_Gold
-MRUItem1=/Game/StarterContent/Materials/M_Metal_Copper
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/ControlButton
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/ControlButton
+MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/GoButton
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/EmotionButton
 MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ColourButton
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/EmotionButton
-MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/GoButton
+MRUItem4=/Game/StarterContent/Materials/M_Metal_Gold
+MRUItem5=/Game/StarterContent/Materials/M_Metal_Copper
 MRUItem6=/Game/Puzzle/Meshes/BaseMaterial
 MRUItem7=/Game/Puzzle/Meshes/BlueMaterial
 MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/TestButton
@@ -1769,6 +1773,10 @@ ControlButton_C.Actor=True
 ControlButton_C.Input=True
 ControlButton_C.TransformCommon=True
 ColourButton_C.TransformCommon=True
+ColourButton_C.Default=True
+EmotionButton_C.Default=True
+GoButton_C.Default=True
+ControlButton_C.Default=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
