Added display panel to output screen

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/GameUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/GameUserSettings.ini
@@ -1,10 +1,10 @@
 [/Script/Engine.GameUserSettings]
 bUseVSync=False
 bUseDynamicResolution=False
-ResolutionSizeX=2048
-ResolutionSizeY=1152
-LastUserConfirmedResolutionSizeX=2048
-LastUserConfirmedResolutionSizeY=1152
+ResolutionSizeX=1980
+ResolutionSizeY=1080
+LastUserConfirmedResolutionSizeX=1980
+LastUserConfirmedResolutionSizeY=1080
 WindowPosX=-1
 WindowPosY=-1
 FullscreenMode=1
@@ -26,4 +26,15 @@ LastGPUBenchmarkResult=-1.000000
 LastGPUBenchmarkMultiplier=1.000000
 bUseHDRDisplayOutput=False
 HDRDisplayOutputNits=1000
+
+[ScalabilityGroups]
+sg.ResolutionQuality=100.000000
+sg.ViewDistanceQuality=3
+sg.AntiAliasingQuality=3
+sg.ShadowQuality=3
+sg.PostProcessQuality=3
+sg.TextureQuality=3
+sg.EffectsQuality=3
+sg.FoliageQuality=3
+sg.ShadingQuality=3
 
