Added code to output display
Added functionality to the output display to allow the inputted commands to be displayed in a list on the screen

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -14,7 +14,7 @@ bShowCompilerLogOnCompileError=False
 DataSourceFolder=(Path="")
 bAnimationReimportWarnings=False
 bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=1
+SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=3
 PreviewFeatureLevel=3
@@ -159,17 +159,16 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/PuzzleBlock.PuzzleBlock
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid.PuzzleBlockGrid
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum.MoodEnum
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=328.000
-WindowSize=X=1276.800 Y=668.800
+WindowSize=X=1277.600 Y=669.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1037,25 +1036,25 @@ SynthBenchmark.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
 MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
-MRUItem1=/Game/Materials/ButtonMats/Purple
-MRUItem2=/Game/Materials/ButtonMats/White
-MRUItem3=/Game/Materials/ButtonMats/Blue
-MRUItem4=/Game/Materials/ButtonMats/Pink
-MRUItem5=/Game/Materials/ButtonMats/Green
-MRUItem6=/Game/Materials/ButtonMats/Yellow
-MRUItem7=/Game/Materials/ButtonMats/Red
-MRUItem8=/Game/Materials/ButtonMats/Black
-MRUItem9=/Game/Materials/ButtonMats/Orange
-MRUItem10=/Game/Materials/ButtonMats/RedMat
-MRUItem11=/Game/Puzzle/Meshes/BaseMaterial
-MRUItem12=/Game/Puzzle/Meshes/BlueMaterial
-MRUItem13=/Game/StarterContent/Materials/M_Metal_Gold
-MRUItem14=/Game/PuzzleBP/Maps/GameEnvironment
-MRUItem15=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
-MRUItem16=/Game/PuzzleBP/Blueprints/PuzzleBlock
-MRUItem17=/Game/PuzzleBP/Maps/PuzzleExampleMap
-MRUItem18=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem19=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem1=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
+MRUItem2=/Game/PuzzleBP/Blueprints/PuzzleBlock
+MRUItem3=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem6=/Game/Materials/ButtonMats/Purple
+MRUItem7=/Game/Materials/ButtonMats/White
+MRUItem8=/Game/Materials/ButtonMats/Blue
+MRUItem9=/Game/Materials/ButtonMats/Pink
+MRUItem10=/Game/Materials/ButtonMats/Green
+MRUItem11=/Game/Materials/ButtonMats/Yellow
+MRUItem12=/Game/Materials/ButtonMats/Red
+MRUItem13=/Game/Materials/ButtonMats/Black
+MRUItem14=/Game/Materials/ButtonMats/Orange
+MRUItem15=/Game/Materials/ButtonMats/RedMat
+MRUItem16=/Game/Puzzle/Meshes/BaseMaterial
+MRUItem17=/Game/Puzzle/Meshes/BlueMaterial
+MRUItem18=/Game/StarterContent/Materials/M_Metal_Gold
+MRUItem19=/Game/PuzzleBP/Maps/GameEnvironment
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2523,9 +2522,9 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=
 StaticMeshComponent=SkeletalMeshComponent.Collision.Collision,
 ControlPanel_C=
-PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+PropertyWrapper=SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-OutputDisplay_C=
+OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,
 ALAN_C=
 BrushComponent=SkeletalMeshComponent.Collision.Collision,
@@ -2599,10 +2598,13 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,Inp
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 SceneComponent=
-PuzzleBlock_C=SkeletalMeshComponent.Collision.Collision,
+PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,
 CameraActor=SkeletalMeshComponent.Collision.Collision,
+Actor=SkeletalMeshComponent.Collision.Collision,
+Brush=SkeletalMeshComponent.Collision.Collision,
+TextRenderComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
