Added trigger for box and check tag

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,15 +160,11 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/PuzzleBlock.PuzzleBlock
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid.PuzzleBlockGrid
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp.Box_Bp
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=328.000
-WindowSize=X=1277.600 Y=669.600
+WindowSize=X=1277.000 Y=669.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -185,7 +181,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=C:/Users/DELL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1015,8 +1011,8 @@ SceneOutliner.TimeStamp=2022.04.14-19.58.43
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2022.04.14-19.58.36
 HierarchicalLODOutliner.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2022.01.27-22.52.53
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.04.14-19.58.29
+BlueprintGraph.LastCompileMethod=External
 ApexDestruction.TimeStamp=2022.04.14-20.11.57
 ApexDestruction.LastCompileMethod=Unknown
 ApexDestructionEditor.TimeStamp=2022.04.14-20.11.57
@@ -1035,26 +1031,26 @@ SynthBenchmark.TimeStamp=2022.01.27-22.53.12
 SynthBenchmark.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
-MRUItem1=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
-MRUItem2=/Game/PuzzleBP/Blueprints/PuzzleBlock
-MRUItem3=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem6=/Game/Materials/ButtonMats/Purple
-MRUItem7=/Game/Materials/ButtonMats/White
-MRUItem8=/Game/Materials/ButtonMats/Blue
-MRUItem9=/Game/Materials/ButtonMats/Pink
-MRUItem10=/Game/Materials/ButtonMats/Green
-MRUItem11=/Game/Materials/ButtonMats/Yellow
-MRUItem12=/Game/Materials/ButtonMats/Red
-MRUItem13=/Game/Materials/ButtonMats/Black
-MRUItem14=/Game/Materials/ButtonMats/Orange
-MRUItem15=/Game/Materials/ButtonMats/RedMat
-MRUItem16=/Game/Puzzle/Meshes/BaseMaterial
-MRUItem17=/Game/Puzzle/Meshes/BlueMaterial
-MRUItem18=/Game/StarterContent/Materials/M_Metal_Gold
-MRUItem19=/Game/PuzzleBP/Maps/GameEnvironment
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp
+MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum
+MRUItem3=/Game/PuzzleBP/Blueprints/PuzzleBlockGrid
+MRUItem4=/Game/PuzzleBP/Blueprints/PuzzleBlock
+MRUItem5=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem8=/Game/Materials/ButtonMats/Purple
+MRUItem9=/Game/Materials/ButtonMats/White
+MRUItem10=/Game/Materials/ButtonMats/Blue
+MRUItem11=/Game/Materials/ButtonMats/Pink
+MRUItem12=/Game/Materials/ButtonMats/Green
+MRUItem13=/Game/Materials/ButtonMats/Yellow
+MRUItem14=/Game/Materials/ButtonMats/Red
+MRUItem15=/Game/Materials/ButtonMats/Black
+MRUItem16=/Game/Materials/ButtonMats/Orange
+MRUItem17=/Game/Materials/ButtonMats/RedMat
+MRUItem18=/Game/Puzzle/Meshes/BaseMaterial
+MRUItem19=/Game/Puzzle/Meshes/BlueMaterial
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -1262,7 +1258,7 @@ Brush.TransformCommon=True
 Brush.BrushSettings=True
 Brush.Replication=True
 Brush.Actor=True
-StaticMeshActor.MaterialParameters=False
+StaticMeshActor.MaterialParameters=True
 Brush.Surface Materials=True
 Brush.Geometry=True
 Brush.Surface Properties=True
@@ -1372,8 +1368,8 @@ StaticMesh.StaticMesh=True
 StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.Navigation=True
-StaticMeshActor.HLOD=False
-StaticMeshActor.Mobile=False
+StaticMeshActor.HLOD=True
+StaticMeshActor.Mobile=True
 SkeletalMesh.Material Slots=True
 SkeletalMesh.LODCustomMode=True
 SkeletalMesh.LOD0=True
@@ -2081,6 +2077,53 @@ MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
 MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
 MaterialExpressionLinearInterpolate.MaterialExpression=True
+TriggerVolume.Actor=True
+TriggerVolume.BrushSettings=True
+TriggerVolume.Replication=True
+TriggerVolume.Cooking=True
+TriggerVolume.Tags=True
+TriggerVolume.Navigation=True
+TriggerVolume.Collision=True
+TriggerVolume.TransformCommon=True
+GameEnvironment_C.Tick=True
+GameEnvironment_C.Replication=True
+GameEnvironment_C.Actor=True
+GameEnvironment_C.Input=True
+StaticMeshActor.AssetUserData=True
+Cube_Blueprint_C.TransformCommon=True
+Cube_Blueprint_C.StaticMesh=True
+Cube_Blueprint_C.Materials=True
+Cube_Blueprint_C.Physics=True
+Cube_Blueprint_C.Collision=True
+Cube_Blueprint_C.Lighting=True
+Cube_Blueprint_C.Rendering=True
+Cube_Blueprint_C.Navigation=True
+Cube_Blueprint_C.VirtualTexture=True
+Cube_Blueprint_C.Tags=True
+Cube_Blueprint_C.Cooking=True
+Cube_Blueprint_C.Replication=True
+Cube_Blueprint_C.Input=True
+Cube_Blueprint_C.Actor=True
+Cube_Blueprint_C.Tick=True
+Cube_Blueprint_C.ComponentTick=True
+Cube_Blueprint_C.ComponentReplication=True
+Cube_Blueprint_C.Variable=True
+Box_Bp_C.Tick=True
+Box_Bp_C.Replication=True
+Box_Bp_C.Rendering=True
+Box_Bp_C.Collision=True
+Box_Bp_C.Actor=True
+Box_Bp_C.Input=True
+Box_Bp_C.TransformCommon=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+StaticMeshComponent.MaterialParameters=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Mobile=True
+StaticMeshComponent.AssetUserData=True
+Box_Bp_C.Default=True
+Box_Bp_C.LOD=True
+Box_Bp_C.Cooking=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2215,8 +2258,13 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Materials/ButtonMats/Pink.Pink=1
 /Game/Materials/ButtonMats/Blue.Blue=1
 /Game/Materials/ButtonMats/White.White=1
+/Game/PuzzleBP/Blueprints/CommandInterface/Cube_Blueprint.Cube_Blueprint=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp.Box_Bp;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_OutputDevice.IORail_OutputDevice;
 RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_IORail.IORail_IORail;
 RecentlyPlaced=/Game/Geometry/Meshes/IOController/IORail_IOconnectCylinders.IORail_IOconnectCylinders;
@@ -2233,10 +2281,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_Flap.ConveyorEnd_Flap;
 RecentlyPlaced=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001.ConveyorEnd_ConeyorEndScan_001;
 RecentlyPlaced=/Game/Geometry/Meshes/Conveyor/conveyor2.conveyor2;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay;
-RecentlyPlaced=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel;
-RecentlyPlaced=/Game/Geometry/Meshes/Conveyor/conveyor_Cylinder_089.conveyor_Cylinder_089;
-RecentlyPlaced=/Game/Geometry/Meshes/Conveyor/conveyor_Cylinder_088.conveyor_Cylinder_088;
-RecentlyPlaced=/Game/Geometry/Meshes/Conveyor/conveyor_Cylinder_087.conveyor_Cylinder_087;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2294,6 +2338,16 @@ NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagar
 MaterialEditorInstanceConstant=
 ControlPanel_C=
 Pawn=
+TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
+GameEnvironment_C="\"Object.Tags\" "
+LevelScriptActor="\"Object.Tags\" "
+Cube_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
+StaticMeshSocket="\"Object.RelativeLocation\" "
+Box_Bp_C="\"Object.Actor.Tags\" "
+StaticMeshComponent=
+BoxComponent="\"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object.Tags.ComponentTags\" "
 
 [MaterialEditor]
 PrimType=1
@@ -2482,6 +2536,7 @@ Box_Brush_Movement_C.Actor=True
 StaticMeshComponent.Collision=True
 UserDefinedEnum.Enumerators=False
 TextRenderComponent.Text=True
+K2Node_VariableGet.Variable=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2520,14 +2575,14 @@ PreserveScaleRatio=False
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
-StaticMeshComponent=SkeletalMeshComponent.Collision.Collision,
+StaticMeshComponent=
 ControlPanel_C=
-PropertyWrapper=SkeletalMeshComponent.Collision.Collision,
-K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,
 ALAN_C=
-BrushComponent=SkeletalMeshComponent.Collision.Collision,
+BrushComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2605,6 +2660,12 @@ CameraActor=SkeletalMeshComponent.Collision.Collision,
 Actor=SkeletalMeshComponent.Collision.Collision,
 Brush=SkeletalMeshComponent.Collision.Collision,
 TextRenderComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+TriggerVolume=SkeletalMeshComponent.Collision.Collision,
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+GameEnvironment_C=
+StaticMeshSocket=
+Cube_Blueprint_C=
+Box_Bp_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
